--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,5 @@
 name: CI
-
 on: pull_request
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -10,4 +8,4 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - run: node --v
+      - run: node -v
