--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: node -v
+      - run: npm ci
   job2:
     needs: job1
     runs-on: ubuntu-latest
     steps:
-      - run: node -v
+      - run: npm test -- --watchAll=false
   
