--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 체크아웃
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
