--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,38 +1,41 @@
-name: 배포
+name: deploy
 
 on:
   workflow_dispatch:
+    inputs:
+      phase:
+        description: ""
+        required: true
+        type: choice
+        options:
+          - sandbox
+          - beta
+          - production
+        default: sandbox
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 체크아웃
-        uses: actions/checkout@v4
-
-      - name: 노드 설정
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 24
           cache: npm
-
-      - name: 의존성 설치
-        run: npm ci
-
-      - name: 빌드
-        run: npm run build
+      - run: npm ci
+      - run: npm run build
 
   upload:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: 체크아웃
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
   symlink:
     needs: upload
     runs-on: ubuntu-latest
-    environment: production
     steps:
-      - name: 체크아웃
-        uses: actions/checkout@v4
+      - uses: ./.github/workflows/symlink.yaml
+        with:
+          tag: ${{ github.ref_name }}
+          phase: ${{ inputs.phase }}
