--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,6 +35,7 @@ jobs:
     needs: upload
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: ./.github/workflows/symlink.yaml
         with:
           tag: ${{ github.ref_name }}
